--- a/oprojektu.html
+++ b/oprojektu.html
@@ -60,8 +60,8 @@
                         <br>
                     </p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                        <a type="button" class="btn btn-outline-primary btn-lg px-4 me-md-2" href="./db/databaze.html">Prozkoumat</a>
-                        <a type="button" class="btn btn-outline-light btn-lg px-4" href="./db/databaze.html#jakprispet">Přispět do projektu</a>
+                        <a class="btn btn-outline-primary btn-lg px-4 me-md-2" href="./db/databaze.html">Prozkoumat</a>
+                        <a class="btn btn-outline-light btn-lg px-4" href="./db/databaze.html#jakprispet">Přispět do projektu</a>
                     </div>
                 </div>
             </div>
@@ -128,8 +128,8 @@
 
                 <ul class="nav col-md-4 justify-content-end list-unstyled d-flex fs-4">
                     <li class="ms-3 "><a class="text-light " href="#"><i class="fas fa-angle-up text-primary "></i></a></li>
-                    <li class="ms-3 "><a class="text-light " href="https://github.com/tomasKubicek/thechesstree" target="_blank "><i class="fab fa-github text-primary "></i></a></li>
-                    <li class="ms-3 "><a class="text-light " href="https://www.instagram.com/kubanec_tomanec/" target="_blank "><i class="fab fa-instagram text-primary "></i></a></li>
+                    <li class="ms-3 "><a class="text-light " href="https://github.com/tomasKubicek/thechesstree" target="_blank"><i class="fab fa-github text-primary "></i></a></li>
+                    <li class="ms-3 "><a class="text-light " href="https://www.instagram.com/kubanec_tomanec/" target="_blank"><i class="fab fa-instagram text-primary "></i></a></li>
                 </ul>
             </footer>
         </div>
