--- a/db/databaze.html
+++ b/db/databaze.html
@@ -12,26 +12,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js" integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/a133fbfca8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../theme.css">
-    <link rel="stylesheet" href="../assets/css/chessboard.css">
-    <link rel="stylesheet" href="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.css" integrity="sha384-q94+BZtLrkL1/ohfjR8c6L+A6qzNH9R2hBLwyoAfu3i/WCvQjzL2RQJ3uNHDISdU" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha384-ZvpUoO/+PpLXR1lu4jmpXWu80pZlYUAfxl5NsBMWOEPSjUn/6Z/hRTt8+pR6L4N2" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js" integrity="sha384-8Vi8VHwn3vjQ9eUHUxex3JSN/NFqUg3QbPyX8kWyb93+8AC/pPWTzj+nHtbC5bxD" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js" integrity="sha512-xRllwz2gdZciIB+AkEbeq+gVhX8VB8XsfqeFbUh+SzHlN96dEduwtTuVuc2u9EROlmW9+yhRlxjif66ORpsgVA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.js" integrity="sha512-oprzqYFJfo4Bx/nNEcSI0xo7ggJrLc+qQ6hrS3zV/Jn0C4dsg4gu+FXW/Vm0jP9CrV7e5e6dcLUYkg3imjfjbw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
 </head>
-
-<style>
-    body {
-        overflow-y: scroll;
-    }
-</style>
-
 
 <body class="bg-dark">
     <nav class="navbar z-3 navbar-expand-md navbar-dark text-light bg-transparent py-0 position-fixed w-100 top-0 start-0 py-sm-3">
         <!-- "position-fixed" dělá to stejné jako sticky, jen nevytváří static mezeru, jinak bych použil "position-sticky" nebo "sticky-top" -->
-        <div class="container d-flex flex-wrap flex-row justify-content-between bg-primary rounded-5 px-5 py-1" id="navcontainer">
+        <div class="container d-flex flex-wrap flex-row justify-content-between bg-primary rounded-5 px-5 py-1" id="navcontainer" style="outline: 2px solid #212529;">
             <a class="navbar-brand fs-3" href="../index.html">♙ The Chess Tree</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainnav" aria-controls="mainnav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -109,7 +95,7 @@
                         <li>Pošlete Pull Request do originálního repositáře. Váš soubor se v databázi zobrazí, jakmile spojím váš Pull Request.</li>
                     </ol>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start mt-4">
-                        <a type="button" class="btn btn-outline-primary btn-lg px-4 me-md-2" href="https://github.com/tomasKubicek/thechesstree">Otevřít GitHub</a>
+                        <a class="btn btn-outline-primary btn-lg px-4 me-md-2" href="https://github.com/tomasKubicek/thechesstree">Otevřít GitHub</a>
                     </div>
                 </div>
             </div>
@@ -141,7 +127,6 @@
         </div>
     </section>
 
-    </header>
     <div class="bg-secondary border-top border-2 " style="border-color: rgba(var(--bs-light-rgb), 0.1); ">
         <div class="container ">
             <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 ">
@@ -154,8 +139,8 @@
 
                 <ul class="nav col-md-4 justify-content-end list-unstyled d-flex fs-4">
                     <li class="ms-3 "><a class="text-light " href="#"><i class="fas fa-angle-up text-primary "></i></a></li>
-                    <li class="ms-3 "><a class="text-light " href="https://github.com/tomasKubicek/thechesstree" target="_blank "><i class="fab fa-github text-primary "></i></a></li>
-                    <li class="ms-3 "><a class="text-light " href="https://www.instagram.com/kubanec_tomanec/" target="_blank "><i class="fab fa-instagram text-primary "></i></a></li>
+                    <li class="ms-3 "><a class="text-light " href="https://github.com/tomasKubicek/thechesstree" target="_blank"><i class="fab fa-github text-primary "></i></a></li>
+                    <li class="ms-3 "><a class="text-light " href="https://www.instagram.com/kubanec_tomanec/" target="_blank"><i class="fab fa-instagram text-primary "></i></a></li>
                 </ul>
             </footer>
         </div>
