--- a/db/otevreni.html
+++ b/db/otevreni.html
@@ -17,15 +17,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha384-ZvpUoO/+PpLXR1lu4jmpXWu80pZlYUAfxl5NsBMWOEPSjUn/6Z/hRTt8+pR6L4N2" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js" integrity="sha384-8Vi8VHwn3vjQ9eUHUxex3JSN/NFqUg3QbPyX8kWyb93+8AC/pPWTzj+nHtbC5bxD" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js" integrity="sha512-xRllwz2gdZciIB+AkEbeq+gVhX8VB8XsfqeFbUh+SzHlN96dEduwtTuVuc2u9EROlmW9+yhRlxjif66ORpsgVA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.js" integrity="sha512-oprzqYFJfo4Bx/nNEcSI0xo7ggJrLc+qQ6hrS3zV/Jn0C4dsg4gu+FXW/Vm0jP9CrV7e5e6dcLUYkg3imjfjbw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 </head>
-
-<style>
-    body {
-        overflow-y: scroll;
-    }
-</style>
 
 
 <body class="bg-dark">
@@ -72,16 +65,15 @@
     </section>
 
 
-    <section class="album py-5 bg-dark">
+    <div class="album py-5 bg-dark">
         <div class="container">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-3 px-1" id="openings">
             </div>
         </div>
-    </section>
+    </div>
 
     <script defer src="./js/displayopenings.js"></script>
 
-    </header>
     <div class="bg-secondary border-top border-2 " style="border-color: rgba(var(--bs-light-rgb), 0.1); ">
         <div class="container ">
             <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 ">
@@ -94,8 +86,8 @@
 
                 <ul class="nav col-md-4 justify-content-end list-unstyled d-flex fs-4">
                     <li class="ms-3 "><a class="text-light " href="#"><i class="fas fa-angle-up text-primary "></i></a></li>
-                    <li class="ms-3 "><a class="text-light " href="https://github.com/tomasKubicek/thechesstree" target="_blank "><i class="fab fa-github text-primary "></i></a></li>
-                    <li class="ms-3 "><a class="text-light " href="https://www.instagram.com/kubanec_tomanec/" target="_blank "><i class="fab fa-instagram text-primary "></i></a></li>
+                    <li class="ms-3 "><a class="text-light " href="https://github.com/tomasKubicek/thechesstree" target="_blank"><i class="fab fa-github text-primary "></i></a></li>
+                    <li class="ms-3 "><a class="text-light " href="https://www.instagram.com/kubanec_tomanec/" target="_blank"><i class="fab fa-instagram text-primary "></i></a></li>
                 </ul>
             </footer>
         </div>
