--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
     </nav>
 
-    <section id="hero" class="text-center bg-image" style="background-image: url('./assets/heroboard.jpg'); background-size: cover; background-position: center center;">
+    <section id="hero" class="text-center bg-image" style="background-image: url('./assets/heroboard.avif'); background-size: cover; background-position: center center;">
         <div class="mask py-5" style="background-color: rgba(0, 16, 0, 0.6); height: 100vh;">
             <div class="container d-flex justify-content-center align-items-center h-100">
                 <div class="text-white">
